# abcd

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
src/abcd/: __main__.py  analysis.py  config.py  dataset.py  embed.py  evaluate.py  importance.py  metadata.py  model.py  plots.py  preprocess.py  stats.py  tables.py  tune.py
src/abcdclinical/: __main__.py  config.py  dataset.py  evaluate.py  model.py  plots.py  preprocess.py  tables.py  tune.py  utils.py
