[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abcdclinical"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.d.hill@duke.edu" }]
description = "Longitudinal prediction of neurodevelopmental in children"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
