[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abcd"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.d.hill@duke.edu" }]
description = "Longitudinal prediction of mental health in children"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Elliot-D-Hill/abcd"
Issues = "https://github.com/Elliot-D-Hill/abcd/issues"